--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -22,11 +22,22 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
-
+    :root{
+      --base:#ffffff,
+      --spacing: 10px,
+      --blur: 10px;
+    }
     /*
       misc styles, nothing to do with CSS variables
     */
-
+    img{
+      padding:var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+    .hl{
+      color: var(--base);
+    }
     body {
       text-align: center;
       background: #193549;
@@ -46,6 +57,17 @@
   </style>
 
   <script>
+
+    let inputs = document.querySelectorAll(".controls input")
+
+    const updateUI = function(){
+      const pixel = this.dataset.sizing || ""
+      document.documentElement.style.setProperty(`--${this.name}`,this.value + pixel)
+      console.log(`${this.value}${pixel}`);
+    }
+    inputs.forEach( input => input.addEventListener("change",updateUI))
+    inputs.forEach( input => input.addEventListener("mousemove",updateUI))
+
   </script>
 
 </body>
