--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -27,6 +27,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -44,6 +45,11 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      transition: 1s ;
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -56,14 +62,23 @@
     .panel > * {
       margin: 0;
       width: 100%;
+      
       transition: transform 0.5s;
+      flex: 1 0 auto; 
+       display: flex;
+       justify-content: center;
+       align-items: center;
     }
+    /* .panel > *:first-child {transform: translateY(-100%)}; */
+    /* .panel.open-active > *:first-child {transform: translateY(0)}; */
+    /* .panel > *:last-child {transform: translateY(100%)}; */
+    /* .panel.open-active > *:last-child {transform: translateY(0)}; */
 
     .panel p {
       text-transform: uppercase;
       font-family: 'Amatic SC', cursive;
       text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
-      font-size: 2em;
+      font-size: 3em;
     }
 
     .panel p:nth-child(2) {
@@ -72,6 +87,7 @@
 
     .panel.open {
       font-size: 40px;
+      flex: 5;
     }
 
   </style>
@@ -106,7 +122,14 @@
   </div>
 
   <script>
+   const panels = document.querySelectorAll(".panel")
 
+   const togglePanel = function(){ 
+        this.classList.toggle("open")
+        this.classList.toggle("open-active")
+   }
+
+   panels.forEach(panel => panel.addEventListener("click",togglePanel))
   </script>
 
 
