--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,28 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const some19 = people.some( man => 2023 - man.year )
+    console.log(some19);
     // Array.prototype.every() // is everyone 19 or older?
+    const every19 = people.some( man => {2023 - man.year} )
+    console.log(every19);
+
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
+
     // find the comment with the ID of 823423
+    const findComment = comments.find( comment => comment.id === 823423 )
+      console.log(findComment);
+   
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const deleteComment = comments.findIndex( comment => comment.id === 823423 )
+    comments.splice(deleteComment,1)
+  
+    console.log(comments,deleteComment);
 
   </script>
 </body>
